project/phase2/test/test_2_r09.spl
int compare(int x, int y)
{
  if (x > y) {return 1;}
  else if (y > x) {return -1;}
  else {return 0;}
}
int test_2_r09()
{
  int a = 5;
  int b = 9;
  int c = 7;
  return compare(a, b, c);
  return compare(a, b);
  return compare(a);
  return compare();
}
